[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "BlockchainRPC"
authors = [{ name = "dadal00" }]
description = "Blockchain Transaction Simulation"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
version = "0.1.0"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
